--- a/BlazorScaffoldingNoAuth/Components/_Imports.razor
+++ b/BlazorScaffoldingNoAuth/Components/_Imports.razor
@@ -8,3 +8,4 @@
 @using Microsoft.JSInterop
 @using BlazorScaffoldingNoAuth
 @using BlazorScaffoldingNoAuth.Components
+@using BlazorScaffoldingNoAuth.Data
