--- a/BlazorScaffoldingNoAuth/Components/Pages/ProductPages/Details.razor
+++ b/BlazorScaffoldingNoAuth/Components/Pages/ProductPages/Details.razor
@@ -21,8 +21,29 @@
             <dd class="col-sm-10">@product.Name</dd>
             <dt class="col-sm-2">Description</dt>
             <dd class="col-sm-10">@product.Description</dd>
-            <dt class="col-sm-2">ImageUrl</dt>
-            <dd class="col-sm-10">@product.ImageUrl</dd>
+            <dt class="col-sm-2">Image</dt>
+            @* <dd class="col-sm-10">@product.ImageUrl</dd> *@
+
+            <dd class="col-sm-10">
+                @if (!string.IsNullOrEmpty(product.ImageUrl))
+                {
+                    string imagePath = $"images/{product.ImageUrl}";
+                    string defaultImagePath = $"images/noimage.jpg";
+
+                    if (File.Exists($"wwwroot/{imagePath}"))
+                    {
+                        <img src="@($"/{imagePath}")" alt="@product.Name" style="max-width: 300px;" />
+                    }
+                    else
+                    {
+                        <img src="@($"/{defaultImagePath}")" alt="No image" style="max-width: 300px;" />
+                    }
+                }
+                else
+                {
+                    <img src="/images/noimage.jpg" alt="No image" style="max-width: 300px;" />    
+                }
+            </dd> 
             <dt class="col-sm-2">Price</dt>
             <dd class="col-sm-10">@product.Price</dd>
             <dt class="col-sm-2">CategoryId</dt>
